# voxel-ledger

./: .editorconfig  .env.dev.example  .env.prod.example  .env.web02.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  ONBOARDING.md  OPERATIONS.md  README.md  agents.md  docker-compose.prod.yml  docker-compose.yml  package.json  phase4.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_auth.py  0003_event_log.py  0004_projection_cursor.py  0005_reference_sequence.py  0006_audit_log.py  0007_settings.py  0008_materials.py  0009_supplies_rates.py  0010_products.py  0011_product_bom.py  0012_custom_fields.py  0013_notes_attachments.py  0014_inventory_locations.py  0015_inventory_transactions.py  0016_inventory_on_hand_alerts.py  0017_accounts.py  0018_journal_entries.py  0019_accounting_periods.py  0020_approvals.py  0021_divisions_budgets.py  0022_printers_cameras.py  0023_jobs_plates.py  0024_printer_history.py  0025_production_orders.py  0026_sales_channels.py  0027_sales.py  0028_sale_consumption_enum.py  0029_sale_je_fk.py  0029_sale_posting_journal_entry_fk.py  0030_pos_carts.py  0030_refunds.py  0030_shipments.py  0031_pos_carts.py  0032_shipments.py  0033_customers.py  0034_quotes.py  0035_invoices.py  0036_payments_and_credits.py  0037_recurring_invoices.py  (+51 more)
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: crypto.py  db.py  logging.py  middleware.py  rate_limit.py  security.py  settings.py
backend/app/events/: __init__.py  registry.py
backend/app/models/: __init__.py  account.py  account_balance.py  accounting_period.py  ai_insight_summary.py  approval_request.py  attachment.py  audit.py  auth.py  bank.py  bank_match_rule.py  bank_reconciliation.py  bill.py  bill_payment.py  budget.py  build.py  camera.py  credit_note.py  custom_field.py  customer.py  customer_credit.py  deposit_slip.py  depreciation_schedule.py  division.py  email_message.py  event.py  expense_category.py  expense_claim.py  fixed_asset.py  fixed_asset_disposal.py  gl_archive_manifest.py  gl_decommission_cutover.py  inventory_location.py  inventory_on_hand.py  inventory_transaction.py  invoice.py  job.py  journal_entry.py  journal_line.py  late_fee_policy.py  (+40 more)
backend/app/projections/: __init__.py  account_balance.py  inventory_on_hand.py  material_cost.py  part_cost.py  product_cost.py  registry.py  replay.py  settings_cache.py  test_event_projection.py  webhook_fanout.py
backend/app/schemas/: __init__.py  accounting_periods.py  accounts.py  ai_insights.py  ap_aging.py  approvals.py  attachments.py  audit.py  auth.py  balance_sheet.py  banking.py  batch_ops.py  bill_payments.py  billable_expenses.py  (+64 more)
backend/docker/: entrypoint.sh
backend/scripts/: README.md
backend/tests/: _approvals_helpers.py  _asset_disposal_helpers.py  _banking_helpers.py  _bill_payments_helpers.py  _billable_expenses_helpers.py  _bills_helpers.py  _customers_helpers.py  _expense_categories_helpers.py  _expense_claims_helpers.py  _fixed_assets_helpers.py  _invoices_helpers.py  _je_helpers.py  _jobs_helpers.py  _late_fees_helpers.py  _payments_helpers.py  _pos_helpers.py  _quotes_helpers.py  _recurring_bills_helpers.py  _recurring_invoices_helpers.py  _refunds_helpers.py  _sales_helpers.py  _settlement_helpers.py  _settlement_match_helpers.py  _shipping_helpers.py  _tax_helpers.py  _tax_remittance_helpers.py  _vendors_helpers.py  _withholding_helpers.py  conftest.py  test_account_balance_endpoint.py  test_account_balance_replay_parity.py  test_accounting_periods_audit.py  test_accounting_periods_endpoints.py  test_accounting_periods_find_period_for.py  test_accounting_periods_overlap_pg.py  test_accounting_periods_overlap_service.py  test_accounting_periods_state_machine.py  test_accounts_archive_with_descendants.py  test_accounts_audit.py  test_accounts_cycle_detection.py  (+409 more)
(+708 files in other folders)
