[project]
name = "voxel-ledger-backend"
version = "0.1.0"
description = "FastAPI backend for the Voxel Ledger / Print Sales v2 rewrite."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<4.1",
    "pyjwt>=2.9",
    "email-validator>=2.2",
    "python-multipart>=0.0.9",
    "reportlab>=4.2",
    "jinja2>=3.1",
    "aiosmtplib>=3.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "testcontainers[postgres]>=4.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Pytest configuration is duplicated from the repo-root pyproject.toml so
# that running `pytest` from inside the backend container (which only sees
# /app, not the repo root) gets the same asyncio mode + marker registry as
# running it from the host venv. Keep both copies in sync.
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a real Postgres (testcontainers or a running compose stack)",
    "benchmark: smoke-level perf check; informational only",
]
